--- a/assets/css/dashboard.css
+++ b/assets/css/dashboard.css
@@ -62,6 +62,10 @@ nav a{
 .sidebar .menu{
     display: none;
 }
+‎welcomeMsg{
+    background: darkblue;
+    color: white;
+}
 .home{
     font-size: 2em;
 }
