--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -85,7 +85,10 @@ a{
 h1,h2,h3,h4,h5,h6{
     font-weight: 400;
 }
-
+.welcomeMsg{
+    background-color: darkblue;
+    color: white;
+}
 @media(max-width:800px){
     .hideOnMobile{
         display: none;
